hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_passing_map2.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.
function expectMapStringBool(Map<string,bool> $m):void { }
function testit():void {
  $n = Map<arraykey,bool>{};
  hh_show($n);
  // Likewise this
  expectMapStringBool($n);
}
